--- a/fdts/s32g274aevb.dts
+++ b/fdts/s32g274aevb.dts
@@ -27,8 +27,15 @@
 		compatible = "nxp,s32gen1-wkpu";
 		reg = <0x40090000 0x10000>, /* WKPU */
 		      <0x4007cb04 0x4>; /* S32G_STDBY_GPR */
+		/*
+		 * Enable RTC and GPIO166 (J5, pin 30 on S32G274A RDB REV B)
+		 * as wake-up sources
+		 */
 		nxp,irqs = <S32GEN1_WKPU_RTC_IRQ
 			    S32GEN1_WKPU_IRQ_RISING
+			    S32GEN1_WKPU_PULL_DIS>,
+			   <S32GEN1_WKPU_EXT_IRQ(11)
+			    S32GEN1_WKPU_IRQ_FALLING
 			    S32GEN1_WKPU_PULL_DIS>;
 
 		status = "disabled";
