--- a/fdts/fsl-s32g274a-rdb.dts
+++ b/fdts/fsl-s32g274a-rdb.dts
@@ -6,11 +6,12 @@
 #include <dt-bindings/reset/s32gen1-wkpu.h>
 
 /dts-v1/;
+#include "fsl-s32g274a.dtsi"
 
 / {
-	compatible = "fsl,s32g274aevb";
-	#address-cells = <1>;
-	#size-cells = <1>;
+	compatible = "fsl,s32g274ardb";
+	#address-cells = <2>;
+	#size-cells = <2>;
 
 	aliases {
 		i2c4 = &i2c4;
@@ -20,13 +21,13 @@
 		compatible = "fsl,vf610-i2c";
 		#address-cells = <1>;
 		#size-cells = <0>;
-		reg = <0x402DC000 0x10000>;
+		reg = <0x0 0x402DC000 0x0 0x10000>;
 	};
 
 	wkpu: wkpu@40090000 {
 		compatible = "nxp,s32gen1-wkpu";
-		reg = <0x40090000 0x10000>, /* WKPU */
-		      <0x4007cb04 0x4>; /* S32G_STDBY_GPR */
+		reg = <0x0 0x40090000 0x0 0x10000>, /* WKPU */
+		      <0x0 0x4007cb04 0x0 0x4>; /* S32G_STDBY_GPR */
 		/*
 		 * Enable RTC and GPIO166 (J5, pin 30 on S32G274A RDB REV B)
 		 * as wake-up sources
