--- a/fdts/fsl-s32-gen1.dtsi
+++ b/fdts/fsl-s32-gen1.dtsi
@@ -6,10 +6,15 @@
 
 #include <dt-bindings/clock/s32gen1-clock-freq.h>
 #include <dt-bindings/clock/s32gen1-clock.h>
+#include <dt-bindings/reset/s32gen1-wkpu.h>
 
 / {
 	#address-cells = <2>;
 	#size-cells = <2>;
+
+	aliases {
+		i2c4 = &i2c4;
+	};
 
 	fxosc: fxosc@40050000 {
 		compatible = "fixed-clock", "fsl,s32gen1-fxosc";
@@ -112,6 +117,31 @@
 		compatible = "fixed-clock";
 		clock-frequency = <125000000>;
 		#clock-cells = <1>;
+	};
+
+	i2c4: i2c@402D8000 {
+		compatible = "fsl,vf610-i2c";
+		#address-cells = <1>;
+		#size-cells = <0>;
+		reg = <0x0 0x402DC000 0x0 0x10000>;
+	};
+
+	wkpu: wkpu@40090000 {
+		compatible = "nxp,s32gen1-wkpu";
+		reg = <0x0 0x40090000 0x0 0x10000>, /* WKPU */
+		      <0x0 0x4007cb04 0x0 0x4>; /* S32G_STDBY_GPR */
+		/*
+		 * Enable RTC and GPIO166 (J5, pin 30 on S32G274A RDB REV B)
+		 * as wake-up sources
+		 */
+		nxp,irqs = <S32GEN1_WKPU_RTC_IRQ
+			    S32GEN1_WKPU_IRQ_RISING
+			    S32GEN1_WKPU_PULL_DIS>,
+			   <S32GEN1_WKPU_EXT_IRQ(11)
+			    S32GEN1_WKPU_IRQ_FALLING
+			    S32GEN1_WKPU_PULL_DIS>;
+
+		status = "disabled";
 	};
 
 	clks: clks {
