dts: s32gen1: Select long warm boot
Issue: ALB-6094
Signed-off-by: Ghennadi Procopciuc <Ghennadi.Procopciuc@nxp.com>

--- a/fdts/fsl-s32-gen1.dtsi
+++ b/fdts/fsl-s32-gen1.dtsi
@@ -141,6 +141,8 @@
 			    S32GEN1_WKPU_IRQ_FALLING
 			    S32GEN1_WKPU_PULL_DIS>;
 
+		nxp,warm-boot = <S32GEN1_WKPU_LONG_BOOT>;
+
 		status = "disabled";
 	};
 
