--- a/fdts/fsl-s32-gen1.dtsi
+++ b/fdts/fsl-s32-gen1.dtsi
@@ -299,7 +299,8 @@
 				<&clks S32GEN1_CLK_LIN_BAUD>,
 				<&clks S32GEN1_CLK_GMAC0_TS>,
 				<&clks S32GEN1_CLK_SPI>,
-				<&clks S32GEN1_CLK_SDHC>;
+				<&clks S32GEN1_CLK_SDHC>,
+				<&clks S32GEN1_CLK_QSPI_2X>;
 			assigned-clock-parents =
 				<&clks S32GEN1_CLK_ARM_PLL_DFS1>,
 				<&clks S32GEN1_CLK_PERIPH_PLL_PHI1>,
@@ -332,6 +333,10 @@
 				<125000000>,
 				<200000000>,
 				<100000000>,
+				<400000000>,
+				/* If S32G274A Rev < 2, CLK_QSPI_2X maximum
+				 * value can be 266666666.
+				 */
 				<400000000>;
 
 			clocks = <&clks S32GEN1_CLK_XBAR_2X>,
@@ -342,7 +347,8 @@
 				<&clks S32GEN1_CLK_CAN_PE>,
 				<&clks S32GEN1_CLK_LIN_BAUD>,
 				<&clks S32GEN1_CLK_SPI>,
-				<&clks S32GEN1_CLK_SDHC>;
+				<&clks S32GEN1_CLK_SDHC>,
+				<&clks S32GEN1_CLK_QSPI_2X>;
 		};
 
 		mc_cgm1: mc_cgm1@40034000 {
