dts: Add OCOTP nodes for S32G
Issue: ALB-7128
Signed-off-by: Ghennadi Procopciuc <Ghennadi.Procopciuc@nxp.com>

--- a/fdts/fsl-s32-gen1.dtsi
+++ b/fdts/fsl-s32-gen1.dtsi
@@ -381,4 +381,9 @@
 				<S32GEN1_DDR_FREQ>;
 		};
 	};
+
+	ocotp: ocotp@400A4000 {
+		reg = <0x0 0x400A4000 0x0 0x400>;
+		status = "okay";
+	};
 };
