--- a/fdts/fsl-s32-gen1.dtsi
+++ b/fdts/fsl-s32-gen1.dtsi
@@ -13,6 +13,7 @@
 	#size-cells = <2>;
 
 	aliases {
+		i2c0 = &i2c0;
 		i2c4 = &i2c4;
 	};
 
@@ -119,7 +120,12 @@
 		#clock-cells = <1>;
 	};
 
-	i2c4: i2c@402D8000 {
+	i2c0: i2c@401E4000 {
+		compatible = "fsl,vf610-i2c";
+		reg = <0x0 0x401E4000 0x0 0x10000>;
+	};
+
+	i2c4: i2c@402DC000 {
 		compatible = "fsl,vf610-i2c";
 		#address-cells = <1>;
 		#size-cells = <0>;
