--- a/fdts/fsl-s32g274a-rdb.dts
+++ b/fdts/fsl-s32g274a-rdb.dts
@@ -1,32 +1,14 @@
 /*
- * Copyright 2020 NXP
+ * Copyright 2020-2021 NXP
  *
  * SPDX-License-Identifier: BSD-3-Clause
  */
 /dts-v1/;
 #include "fsl-s32g274a.dtsi"
+#include "fsl-s32g-rdb.dtsi"
 
 / {
 	compatible = "fsl,s32g274ardb";
-};
-
-/* PMIC */
-&i2c4 {
-	status = "okay";
-	clock-frequency=<100000>;
-
-	vr5510@20 {
-		compatible = "fsl,vr5510";
-		reg = <0x20>;
-		status = "okay";
-	};
-
-	vr5510_fsu@21 {
-		compatible = "fsl,vr5510";
-		reg = <0x21>;
-		status = "okay";
-	};
-
 };
 
 &wkpu {
