--- a/fdts/fsl-s32g399a-rdb.dts
+++ b/fdts/fsl-s32g399a-rdb.dts
@@ -4,9 +4,9 @@
  * SPDX-License-Identifier: BSD-3-Clause
  */
 /dts-v1/;
-#include "fsl-s32g398a.dtsi"
+#include "fsl-s32g3.dtsi"
 #include "fsl-s32g-rdb.dtsi"
 
 / {
-	compatible = "fsl,s32g398ardb";
+	compatible = "fsl,s32g399ardb";
 };
