s32r: dts: Add s32r45 device tree
Issue: ALB-7411
Signed-off-by: Andra-Teodora Ilie <andra.ilie@nxp.com>

--- a/fdts/fsl-s32r45-evb.dts
+++ b/fdts/fsl-s32r45-evb.dts
@@ -3,12 +3,118 @@
  *
  * SPDX-License-Identifier: BSD-3-Clause
  */
+#include <dt-bindings/clock/s32r45-clock.h>
+#include <dt-bindings/clock/s32r45-scmi-clock.h>
 
 /dts-v1/;
-
+#include "fsl-s32-gen1.dtsi"
 
 /{
 	model = "NXP S32R45";
 	compatible = "fsl,s32r45", "fsl,s32gen1";
+
+	gmac1_ext_rx: gmac1_ext_rx {
+		compatible = "fixed-clock";
+		clock-frequency = <25000000>;
+		#clock-cells = <1>;
+	};
+
+	gmac1_ext_tx: gmac1_ext_tx {
+		compatible = "fixed-clock";
+		clock-frequency = <125000000>;
+		#clock-cells = <1>;
+	};
+
+	gmac1_ext_ref: gmac1_ext_ref {
+		compatible = "fixed-clock";
+		clock-frequency = <50000000>;
+		#clock-cells = <1>;
+	};
+};
+
+&clks {
+	clocks = <&clks S32GEN1_CLK_PER>,
+		<&clks S32GEN1_CLK_FTM0_REF>,
+		<&clks S32GEN1_CLK_FTM1_REF>,
+		<&clks S32GEN1_CLK_CAN_PE>,
+		<&clks S32GEN1_CLK_SPI>,
+		<&clks S32GEN1_CLK_QSPI>,
+		<&clks S32R45_CLK_ACCEL4>,
+		<&clks S32R45_CLK_ACCEL3>;
+
+	assigned-clocks =
+			<&clks S32GEN1_CLK_FXOSC>,
+			<&clks S32GEN1_CLK_FIRC>,
+			<&clks S32GEN1_CLK_SIRC>,
+			<&clks S32GEN1_CLK_GMAC0_EXT_RX>,
+			<&clks S32R45_CLK_SERDES1_LANE0_TX>,
+			<&clks S32R45_CLK_SERDES1_LANE0_CDR>,
+			<&clks S32GEN1_CLK_SERDES0_LANE0_TX>,
+			<&clks S32GEN1_CLK_SERDES0_LANE0_CDR>,
+			<&clks S32GEN1_CLK_SERDES_REF>;
+	assigned-clock-parents =
+			<&fxosc 0>,
+			<&firc 0>,
+			<&sirc 0>,
+			<&gmac0_ext_rx 0>,
+			<&serdes1_lane0_ext_tx 0>,
+			<&serdes1_lane0_ext_cdr 0>,
+			<&serdes0_lane0_ext_tx 0>,
+			<&serdes0_lane0_ext_cdr 0>;
+	assigned-clock-rates =
+			<0>, <0>, <0>, <0>,
+			<0>, <0>, <0>, <0>,
+			<100000000>;
+
+	mc_cgm2: mc_cgm2@440C0000 {
+		compatible = "fsl,s32gen1-mc_cgm2";
+		reg = <0x0 0x440C0000 0x0 0x3000>;
+
+		assigned-clocks =
+			<&clks S32R45_CLK_MC_CGM2_MUX0>,
+			<&clks S32R45_CLK_MC_CGM2_MUX1>,
+			<&clks S32R45_CLK_ACCEL3>,
+			<&clks S32R45_CLK_ACCEL4>;
+		assigned-clock-parents =
+			<&clks S32R45_CLK_ACCEL_PLL_PHI0>,
+			<&clks S32R45_CLK_ARM_PLL_DFS4_2>;
+		assigned-clock-rates =
+			<0>,
+			<0>,
+			<600000000>,
+			<400000000>;
+	};
+};
+
+&accelpll {
+	assigned-clocks =
+		<&clks S32GEN1_CLK_ACCEL_PLL_MUX>,
+		<&clks S32GEN1_CLK_ACCEL_PLL_VCO>,
+		<&clks S32R45_CLK_ACCEL_PLL_PHI0>,
+		<&clks S32GEN1_CLK_ARM_PLL_DFS4>;
+	assigned-clock-parents =
+		<&clks S32GEN1_CLK_FXOSC>;
+	assigned-clock-rates =
+		<0>,
+		<1800000000>,
+		<600000000>,
+		<400000000>;
+};
+
+
+&mc_cgm0 {
+	clocks = <&clks S32GEN1_CLK_SERDES_REF>,
+		<&clks S32GEN1_CLK_PER>,
+		<&clks S32GEN1_CLK_FTM0_REF>,
+		<&clks S32GEN1_CLK_FTM1_REF>,
+		<&clks S32GEN1_CLK_CAN_PE>,
+		<&clks S32GEN1_CLK_LIN_BAUD>,
+		<&clks S32GEN1_CLK_SPI>,
+		<&clks S32GEN1_CLK_QSPI>;
+};
+
+&mc_cgm2 {
+	clocks = <&clks S32R45_CLK_ACCEL4>,
+		<&clks S32R45_CLK_ACCEL3>;
 };
 
