--- a/fdts/fsl-s32-gen1.dtsi
+++ b/fdts/fsl-s32-gen1.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright 2020-2021 NXP
+ * Copyright 2020-2022 NXP
  *
  * SPDX-License-Identifier: BSD-3-Clause
  */
@@ -137,14 +137,10 @@
 		reg = <0x0 0x40090000 0x0 0x10000>, /* WKPU */
 		      <0x0 0x4007cb04 0x0 0x4>; /* S32G_STDBY_GPR */
 		/*
-		 * Enable RTC and GPIO166 (J5, pin 30 on S32G274A RDB REV B)
-		 * as wake-up sources
+		 * Enable RTC as wake-up source
 		 */
 		nxp,irqs = <S32GEN1_WKPU_RTC_IRQ
 			    S32GEN1_WKPU_IRQ_RISING
-			    S32GEN1_WKPU_PULL_DIS>,
-			   <S32GEN1_WKPU_EXT_IRQ(11)
-			    S32GEN1_WKPU_IRQ_FALLING
 			    S32GEN1_WKPU_PULL_DIS>;
 
 		nxp,warm-boot = <S32GEN1_WKPU_LONG_BOOT>;
