--- a/fdts/fsl-s32g-rdb.dtsi
+++ b/fdts/fsl-s32g-rdb.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright 2021 NXP
+ * Copyright 2021-2022 NXP
  *
  * SPDX-License-Identifier: BSD-3-Clause
  */
@@ -23,4 +23,6 @@
 
 };
 
-
+&wkpu {
+	status = "okay";
+};
