s32g3: add s32g399ardb3 and s32g3xxaevb boards
The new build targets for the s32g3 SOC will be s32g399ardb3 and
s32g3xxaevb.

Issue: ALB-8443
Signed-off-by: Bogdan-Gabriel Roman <bogdan-gabriel.roman@nxp.com>

--- a/fdts/fsl-s32g399a-rdb3.dts
+++ b/fdts/fsl-s32g399a-rdb3.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright 2021 NXP
+ * Copyright 2021-2022 NXP
  *
  * SPDX-License-Identifier: BSD-3-Clause
  */
@@ -8,5 +8,5 @@
 #include "fsl-s32g-rdb.dtsi"
 
 / {
-	compatible = "fsl,s32g399ardb";
+	compatible = "fsl,s32g399ardb3";
 };
