s32g2: disable vr5510 for s32g2xxaevb
Issue: ALB-8443

Signed-off-by: Radu Pirea (NXP OSS) <radu-nicolae.pirea@oss.nxp.com>

--- a/fdts/fsl-s32g2xxa-evb.dts
+++ b/fdts/fsl-s32g2xxa-evb.dts
@@ -11,5 +11,18 @@
 };
 
 &i2c4 {
-	status = "disabled";
+	status = "okay";
+	clock-frequency=<100000>;
+
+	vr5510@20 {
+		compatible = "fsl,vr5510";
+		reg = <0x20>;
+		status = "okay";
+	};
+
+	vr5510_fsu@21 {
+		compatible = "fsl,vr5510";
+		reg = <0x21>;
+		status = "okay";
+	};
 };
