--- a/fdts/fsl-s32g-rdb.dtsi
+++ b/fdts/fsl-s32g-rdb.dtsi
@@ -10,13 +10,13 @@
 	clock-frequency=<100000>;
 
 	vr5510@20 {
-		compatible = "fsl,vr5510";
+		compatible = "nxp,vr5510";
 		reg = <0x20>;
 		status = "okay";
 	};
 
 	vr5510_fsu@21 {
-		compatible = "fsl,vr5510";
+		compatible = "nxp,vr5510";
 		reg = <0x21>;
 		status = "okay";
 	};
