--- a/fdts/fsl-s32g274a.dtsi
+++ b/fdts/fsl-s32g274a.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright 2020-2021 NXP
+ * Copyright 2020-2022 NXP
  *
  * SPDX-License-Identifier: BSD-3-Clause
  */
@@ -27,5 +27,5 @@
 };
 
 &ocotp {
-	compatible = "fsl,s32g-ocotp";
+	compatible = "nxp,s32g-ocotp";
 };
