--- a/fdts/fsl-s32g.dtsi
+++ b/fdts/fsl-s32g.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright 2020-2021 NXP
+ * Copyright 2020-2022 NXP
  *
  * SPDX-License-Identifier: BSD-3-Clause
  */
@@ -60,7 +60,7 @@
 		<100000000>;
 
 	mc_cgm2: mc_cgm2@44018000 {
-		compatible = "fsl,s32gen1-mc_cgm2";
+		compatible = "nxp,s32cc-mc_cgm2";
 		reg = <0x0 0x44018000 0x0 0x3000>;
 
 		assigned-clocks =
