--- a/fdts/fsl-s32-gen1.dtsi
+++ b/fdts/fsl-s32-gen1.dtsi
@@ -355,7 +355,7 @@
 	};
 
 	qspi: quadspi@40134000 {
-		compatible = "fsl,s32gen1-qspi";
+		compatible = "nxp,s32cc-qspi";
 		#address-cells = <1>;
 		#size-cells = <0>;
 		reg = <0x0 0x00000000 0x0 0x20000000>,
