--- a/fdts/fsl-s32g274a.dtsi
+++ b/fdts/fsl-s32g274a.dtsi
@@ -5,6 +5,7 @@
  */
 
 #include <dt-bindings/clock/s32g-clock.h>
+#include <dt-bindings/ddr-errata/s32-ddr-errata.h>
 
 /dts-v1/;
 #include "fsl-s32g.dtsi"
@@ -28,4 +29,17 @@
 
 &ocotp {
 	compatible = "nxp,s32g-ocotp";
+};
+
+&reserved_memory {
+	ddr_errata_reserved: ddr {
+		reg = <0x0 DDR_ERRATA_REGION_BASE
+			   0x0 DDR_ERRATA_REGION_SIZE>; /* 4 KB */
+		no-map;
+	};
+};
+
+&ddr_errata {
+	memory-region = <&ddr_errata_reserved>;
+	status = "okay";
 };
