s32cc: dts: Refactor 'reserved-memory' node usage
Issue: ALB-8823
Signed-off-by: Ciprian Costea <ciprianmarian.costea@nxp.com>

--- a/fdts/fsl-s32g274a.dtsi
+++ b/fdts/fsl-s32g274a.dtsi
@@ -12,6 +12,14 @@
 / {
 	model = "NXP S32G2";
 	compatible = "nxp,s32g2";
+
+	reserved-memory {
+		ddr_errata_reserved: ddr@85000000 {
+			reg = <0x0 DDR_ERRATA_REGION_BASE
+				   0x0 DDR_ERRATA_REGION_SIZE>; /* 4 KB */
+			no-map;
+		};
+	};
 };
 
 &mc_cgm0 {
@@ -29,14 +37,6 @@
 
 &ocotp {
 	compatible = "nxp,s32g-ocotp";
-};
-
-&reserved_memory {
-	ddr_errata_reserved: ddr {
-		reg = <0x0 DDR_ERRATA_REGION_BASE
-			   0x0 DDR_ERRATA_REGION_SIZE>; /* 4 KB */
-		no-map;
-	};
 };
 
 &ddr_errata {
