--- a/fdts/fsl-s32r45-evb.dts
+++ b/fdts/fsl-s32r45-evb.dts
@@ -14,6 +14,14 @@
 	model = "NXP S32R45";
 	compatible = "nxp,s32r45";
 
+	reserved-memory {
+		ddr_errata_reserved: ddr@85000000 {
+			reg = <0x0 DDR_ERRATA_REGION_BASE
+				   0x0 DDR_ERRATA_REGION_SIZE>; /* 4 KB */
+			no-map;
+		};
+	};
+
 	gmac1_ext_rx: gmac1_ext_rx {
 		compatible = "fixed-clock";
 		clock-frequency = <25000000>;
@@ -117,14 +125,6 @@
 &mc_cgm2 {
 	clocks = <&clks S32R45_CLK_ACCEL4>,
 		<&clks S32R45_CLK_ACCEL3>;
-};
-
-&reserved_memory {
-	ddr_errata_reserved: ddr {
-		reg = <0x0 DDR_ERRATA_REGION_BASE
-			   0x0 DDR_ERRATA_REGION_SIZE>; /* 4 KB */
-		no-map;
-	};
 };
 
 &ddr_errata {
