--- a/fdts/fsl-s32r45-evb.dts
+++ b/fdts/fsl-s32r45-evb.dts
@@ -75,9 +75,9 @@
 			<0>, <0>, <0>, <0>,
 			<100000000>;
 
-	mc_cgm2: mc_cgm2@440C0000 {
+	mc_cgm2: mc_cgm2@440c0000 {
 		compatible = "nxp,s32cc-mc_cgm2";
-		reg = <0x0 0x440C0000 0x0 0x3000>;
+		reg = <0x0 0x440c0000 0x0 0x3000>;
 
 		assigned-clocks =
 			<&clks S32R45_CLK_MC_CGM2_MUX0>,
