fdts: s32: Remove 'fsl-' prefix from device trees name
Issue: ALB-8823
Signed-off-by: Ghennadi Procopciuc <ghennadi.procopciuc@nxp.com>

--- a/fdts/s32g.dtsi
+++ b/fdts/s32g.dtsi
@@ -7,7 +7,7 @@
 #include <dt-bindings/clock/s32g-clock.h>
 
 /dts-v1/;
-#include "fsl-s32-gen1.dtsi"
+#include "s32-gen1.dtsi"
 / {
 	model = "NXP S32G";
 };
