--- a/fdts/s32g274a-rdb2.dts
+++ b/fdts/s32g274a-rdb2.dts
@@ -4,5 +4,5 @@
  * SPDX-License-Identifier: BSD-3-Clause
  */
 /dts-v1/;
-#include "fsl-s32g274a.dtsi"
-#include "fsl-s32g-rdb.dtsi"
+#include "s32g274a.dtsi"
+#include "s32g-rdb.dtsi"
