--- a/fdts/s32g399a-rdb3.dts
+++ b/fdts/s32g399a-rdb3.dts
@@ -4,5 +4,5 @@
  * SPDX-License-Identifier: BSD-3-Clause
  */
 /dts-v1/;
-#include "fsl-s32g3.dtsi"
-#include "fsl-s32g-rdb.dtsi"
+#include "s32g3.dtsi"
+#include "s32g-rdb.dtsi"
