--- a/fdts/s32g3xxa-evb.dts
+++ b/fdts/s32g3xxa-evb.dts
@@ -4,8 +4,7 @@
  * SPDX-License-Identifier: BSD-3-Clause
  */
 /dts-v1/;
-#include "fsl-s32g274a.dtsi"
-#include "fsl-s32g-rdb.dtsi"
+#include "s32g3.dtsi"
 
 /* PMIC */
 &i2c4 {
