--- a/fdts/s32r45-evb.dts
+++ b/fdts/s32r45-evb.dts
@@ -8,7 +8,7 @@
 #include <dt-bindings/ddr-errata/s32-ddr-errata.h>
 
 /dts-v1/;
-#include "fsl-s32-gen1.dtsi"
+#include "s32-gen1.dtsi"
 
 /{
 	model = "NXP S32R45";
