fdts: Rename 's32-gen1.dtsi' to 's32cc.dtsi'
Issue: ALB-8823
Signed-off-by: Ghennadi Procopciuc <ghennadi.procopciuc@nxp.com>

--- a/fdts/s32r45-evb.dts
+++ b/fdts/s32r45-evb.dts
@@ -8,7 +8,7 @@
 #include <dt-bindings/ddr-errata/s32-ddr-errata.h>
 
 /dts-v1/;
-#include "s32-gen1.dtsi"
+#include "s32cc.dtsi"
 
 /{
 	model = "NXP S32R45";
