--- a/fdts/s32g274a-bluebox3.dts
+++ b/fdts/s32g274a-bluebox3.dts
@@ -4,7 +4,7 @@
  * SPDX-License-Identifier: BSD-3-Clause
  */
 /dts-v1/;
-#include "s32g274a.dtsi"
+#include "s32g2.dtsi"
 #include "s32g-rdb.dtsi"
 
 /* PMIC */
