fdts: s32cc: Rename WKPU compatible to "nxp,s32cc-wkpu"
Issue: ALB-8823
Signed-off-by: Ghennadi Procopciuc <ghennadi.procopciuc@nxp.com>

--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -36,7 +36,7 @@
 		};
 
 		wkpu: wkpu@40090000 {
-			compatible = "nxp,s32gen1-wkpu";
+			compatible = "nxp,s32cc-wkpu";
 			reg = <0x0 0x40090000 0x0 0x10000>, /* WKPU */
 			      <0x0 0x4007cb04 0x0 0x4>; /* S32G_STDBY_GPR */
 			/*
